Added Product Details Extraction

--- a/Data_Extraction.ipynb
+++ b/Data_Extraction.ipynb
@@ -61,15 +61,19 @@
     "\n",
     "    time.sleep(5) # Let the user actually see something!\n",
     "\n",
-    "    search_box = driver.find_element(By.ID, 'twotabsearchtextbox')\n",
+    "    search_box = driver.find_element(By.ID, 'twotabsearchtextbox') # To Find the Search box\n",
     "\n",
-    "    search_box.send_keys('t shirt for men')\n",
+    "    search_box.send_keys('t shirt for men') # Enter the Search values\n",
     "\n",
     "    search_box.submit()\n",
     "\n",
     "    url_list=[]\n",
+    "\n",
     "    elements = driver.find_elements(By.XPATH, '//div[@data-component-type=\"s-search-result\"]//span//span/a[@class=\"a-link-normal s-no-outline\"][@href]')\n",
+    "    \n",
     "    url_list.extend([element.get_attribute('href') for element in elements])\n",
+    "\n",
+    "    driver.quit()\n",
     "\n",
     "    return url_list"
    ]
@@ -153,6 +157,203 @@
     "url = 'https://www.amazon.in/'\n",
     "hyper_links = to_get_Product_hyper_link(url)\n",
     "hyper_links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_get_Product_details(url):\n",
+    "\n",
+    "    driver = webdriver.Chrome()\n",
+    "    driver.get(url)\n",
+    "    time.sleep(5)\n",
+    "    try:\n",
+    "        element = driver.find_element(By.XPATH, '//div[@id=\"centerCol\"]')\n",
+    "        elements = driver.find_element(By.XPATH, '//div[@data-feature-name=\"productFactsDesktop\"]/div')\n",
+    "\n",
+    "\n",
+    "        data = dict(productname = element.find_element(By.XPATH, './/h1').text,\n",
+    "                    productprice = element.find_element(By.XPATH, '//div[@id=\"centerCol\"]/div/div/div/div/div/span/span[2]/span[2]').text,\n",
+    "                    discount = element.find_element(By.XPATH, '//div[@id=\"centerCol\"]/div/div/div/div/div/span[2]').text,\n",
+    "                    Material_composition = element.find_element(By.XPATH, '//div[@data-feature-name=\"productFactsDesktop\"]/div/div[1]/div[1]/div/div[2]/span/span').text,\n",
+    "                    Pattern = elements.find_element(By.XPATH, '//div[@data-feature-name=\"productFactsDesktop\"]/div/div[1]/div[2]/div/div[2]/span/span').text,\n",
+    "                    Fit_type= elements.find_element(By.XPATH, '//div[@data-feature-name=\"productFactsDesktop\"]/div/div[1]/div[3]/div/div[2]/span/span').text,\n",
+    "                    Sleeve_type= elements.find_element(By.XPATH, '//div[@data-feature-name=\"productFactsDesktop\"]/div/div[1]/div[4]/div/div[2]/span/span').text,\n",
+    "                    Collar_style= elements.find_element(By.XPATH, '//div[@data-feature-name=\"productFactsDesktop\"]/div/div[1]/div[5]/div/div[2]/span/span').text,\n",
+    "                    Length= elements.find_element(By.XPATH, '//div[@data-feature-name=\"productFactsDesktop\"]/div/div[1]/div[6]/div/div[2]/span/span').text,\n",
+    "                    Country_of_Origin= elements.find_element(By.XPATH, '//div[@data-feature-name=\"productFactsDesktop\"]/div/div[1]/div[7]/div/div[2]/span/span').text,\n",
+    "                    ProductLink = url)\n",
+    "\n",
+    "        driver.quit()\n",
+    "    except NoSuchElementException as e:\n",
+    "        pass\n",
+    "\n",
+    "    finally:\n",
+    "        driver.quit()\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>productname</th>\n",
+       "      <th>productprice</th>\n",
+       "      <th>discount</th>\n",
+       "      <th>Material_composition</th>\n",
+       "      <th>Pattern</th>\n",
+       "      <th>Fit_type</th>\n",
+       "      <th>Sleeve_type</th>\n",
+       "      <th>Collar_style</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>Country_of_Origin</th>\n",
+       "      <th>ProductLink</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Amazon Brand - Symbol Men's Cotton Rich Stripe...</td>\n",
+       "      <td>499</td>\n",
+       "      <td>-50%</td>\n",
+       "      <td>Striped</td>\n",
+       "      <td>Regular Fit</td>\n",
+       "      <td>Short Sleeve</td>\n",
+       "      <td>Classic Collar</td>\n",
+       "      <td>Standard Length</td>\n",
+       "      <td>Collared Neck</td>\n",
+       "      <td>India</td>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Amazon Brand - Symbol Men's Cotton Rich Polo T...</td>\n",
+       "      <td>399</td>\n",
+       "      <td>-63%</td>\n",
+       "      <td>60% Cotton, 40% Polyester</td>\n",
+       "      <td>Solid</td>\n",
+       "      <td>Regular Fit</td>\n",
+       "      <td>Short Sleeve</td>\n",
+       "      <td>Classic Collar</td>\n",
+       "      <td>Standard Length</td>\n",
+       "      <td>India</td>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amazon Brand - Symbol Men's Cotton Rich Polo T...</td>\n",
+       "      <td>749</td>\n",
+       "      <td>-67%</td>\n",
+       "      <td>60% Cotton, 40% Polyester</td>\n",
+       "      <td>Solid</td>\n",
+       "      <td>Regular Fit</td>\n",
+       "      <td>Half Sleeve</td>\n",
+       "      <td>Polo Collar</td>\n",
+       "      <td>Standard Length</td>\n",
+       "      <td>India</td>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Amazon Brand - Symbol Men's Cotton Rich Polo T...</td>\n",
+       "      <td>449</td>\n",
+       "      <td>-63%</td>\n",
+       "      <td>60% Polyester, 40% Cotton</td>\n",
+       "      <td>Solid</td>\n",
+       "      <td>Regular Fit</td>\n",
+       "      <td>Short Sleeve</td>\n",
+       "      <td>Mandarin Collar</td>\n",
+       "      <td>Standard Length</td>\n",
+       "      <td>India</td>\n",
+       "      <td>https://www.amazon.in/sspa/click?ie=UTF8&amp;spc=M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lymio Men T-Shirt || T-Shirt for Men || Plain ...</td>\n",
+       "      <td>379</td>\n",
+       "      <td>-87%</td>\n",
+       "      <td>Cotton Blend</td>\n",
+       "      <td>Regular Fit</td>\n",
+       "      <td>Half Sleeve</td>\n",
+       "      <td>Collarless</td>\n",
+       "      <td>Standard Length</td>\n",
+       "      <td>Dom</td>\n",
+       "      <td>India</td>\n",
+       "      <td>https://www.amazon.in/T-Shirt-Plain-Shirt-Polo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         productname productprice discount  \\\n",
+       "0  Amazon Brand - Symbol Men's Cotton Rich Stripe...          499     -50%   \n",
+       "1  Amazon Brand - Symbol Men's Cotton Rich Polo T...          399     -63%   \n",
+       "2  Amazon Brand - Symbol Men's Cotton Rich Polo T...          749     -67%   \n",
+       "3  Amazon Brand - Symbol Men's Cotton Rich Polo T...          449     -63%   \n",
+       "4  Lymio Men T-Shirt || T-Shirt for Men || Plain ...          379     -87%   \n",
+       "\n",
+       "        Material_composition      Pattern      Fit_type     Sleeve_type  \\\n",
+       "0                    Striped  Regular Fit  Short Sleeve  Classic Collar   \n",
+       "1  60% Cotton, 40% Polyester        Solid   Regular Fit    Short Sleeve   \n",
+       "2  60% Cotton, 40% Polyester        Solid   Regular Fit     Half Sleeve   \n",
+       "3  60% Polyester, 40% Cotton        Solid   Regular Fit    Short Sleeve   \n",
+       "4               Cotton Blend  Regular Fit   Half Sleeve      Collarless   \n",
+       "\n",
+       "      Collar_style           Length Country_of_Origin  \\\n",
+       "0  Standard Length    Collared Neck             India   \n",
+       "1   Classic Collar  Standard Length             India   \n",
+       "2      Polo Collar  Standard Length             India   \n",
+       "3  Mandarin Collar  Standard Length             India   \n",
+       "4  Standard Length              Dom             India   \n",
+       "\n",
+       "                                         ProductLink  \n",
+       "0  https://www.amazon.in/sspa/click?ie=UTF8&spc=M...  \n",
+       "1  https://www.amazon.in/sspa/click?ie=UTF8&spc=M...  \n",
+       "2  https://www.amazon.in/sspa/click?ie=UTF8&spc=M...  \n",
+       "3  https://www.amazon.in/sspa/click?ie=UTF8&spc=M...  \n",
+       "4  https://www.amazon.in/T-Shirt-Plain-Shirt-Polo...  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "details=[]\n",
+    "\n",
+    "for i in range(len(hyper_links)):\n",
+    "    details.append(to_get_Product_details(hyper_links[i]))\n",
+    "\n",
+    "df= pd.DataFrame(details)\n",
+    "df"
    ]
   }
  ],
